Fix nav on mobile. Added about content. Added new result dialog. Added better sharing capabilities.

--- a/src/App.css
+++ b/src/App.css
@@ -4,4 +4,5 @@ input[type=text] {
 
 pre {
   line-height: 17px;
+  font-size: inherit !important;
 }
